Add custom analysis scripts and modifications (excluding large files)
- Add analyze_results.py for result analysis
- Add create_model_datasets.py for dataset creation
- Add evaluate_optimizer.py for optimizer evaluation
- Add prepare_ecoli_data.py for E. coli data preparation
- Add regenerate_finetune_json.py for finetune data regeneration
- Add rl_finetune.py for reinforcement learning fine-tuning
- Modify CodonEvaluation.py, CodonPrediction.py, CodonUtils.py
- Update finetune.py with improvements
- Update .gitignore to exclude large model files and datasets
- Add data, models, and results directories (excluding large files)

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+codon_env/
 
 # Spyder project settings
 .spyderproject
@@ -175,3 +176,7 @@ lightning_logs/
 # PyTorch model weights
 *.pth
 *.pt
+# Large files excluded from Git
+models/ecoli-codon-optimizer/finetune.ckpt
+models/ecoli-codon-optimizer/finetune_best.ckpt
+data/ecoli_processed_genes.csv
