--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,14 @@ scipy>=1.13.1,<3.0
 setuptools>=70.0.0
 torch>=2.0.0,<3.0
 tqdm>=4.66.2,<5.0
-transformers>=4.40.0,<5.0
+transformers==4.36.2
+
+# PPO Enhancement Dependencies
+stable-baselines3==2.0.0      # PPO implementation
+gym==0.26.2                   # Environment for RL
+peft==0.7.1                   # Parameter-Efficient Fine-tuning (LoRA)
+bitsandbytes>=0.41.0,<1.0      # Memory optimization for large models
+accelerate>=0.21.0,<1.0        # Multi-GPU distributed training
+datasets>=2.14.0,<3.0          # Dataset handling for RL training
+
+shimmy>=0.2.1
