--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ torch = "^2.0.0"
 tqdm = "^4.66.2"
 transformers = "^4.40.0"
 CAI-PyPI = "^2.0.1"
+codon-bias = "^1.0.2"
+gcua = "^0.1.2"
+dtw-python = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 coverage = {version = "^7.0", extras = ["toml"]}
