--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,11 @@ setuptools>=70.0.0
 torch>=2.0.0,<3.0
 tqdm>=4.66.2,<5.0
 transformers>=4.40.0,<5.0
-codon-bias>=1.0.2,<2.0
-gcua>=0.1.2,<1.0
+codon-bias>=0.3.5,<0.4
 dtw-python>=1.3.0,<2.0
+
+dnachisel>=1.0
+paretoset>=1.2.0
+softadapt>=0.1.2,<0.2
+ema-pytorch>=0.4.3
+torchmetrics>=1.4.0
