--- a/streamlit_gui/requirements.txt
+++ b/streamlit_gui/requirements.txt
@@ -5,8 +5,14 @@ numpy>=1.21.0
 plotly>=5.0.0
 transformers>=4.21.0
 scipy>=1.9.0
-CAI>=1.0.5
 tokenizers>=0.13.0
 tqdm>=4.64.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
+onnxruntime>=1.15.0
+python-codon-tables>=0.1.12
+biopython>=1.79
+scikit-learn>=1.0.0
+requests>=2.25.0
+ipywidgets>=7.6.0
+git+https://github.com/Benjamin-Lee/CodonAdaptationIndex.git
