Enhance model loading and data handling in Streamlit GUI
- Integrated Hugging Face Hub for downloading fine-tuned models and datasets, improving model loading reliability.
- Updated the model loading process to provide clearer status messages and fallback mechanisms.
- Added functions to download and cache reference data and tAI weights from Hugging Face, with error handling for download failures.
- Enhanced the sidebar to include detailed dataset and model information for better user guidance.
- Updated requirements.txt to include new dependencies for Hugging Face integration.

--- a/streamlit_gui/requirements.txt
+++ b/streamlit_gui/requirements.txt
@@ -15,4 +15,6 @@ biopython>=1.79
 scikit-learn>=1.0.0
 requests>=2.25.0
 ipywidgets>=7.6.0
+huggingface-hub>=0.20.0
+datasets>=2.0.0
 git+https://github.com/Benjamin-Lee/CodonAdaptationIndex.git
